--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-scripts": "3.0.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.0.0",
     "@testing-library/react": "^8.0.4",
     "@types/classnames": "^2.2.7",
     "@types/jest": "24.0.13",
