--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "redux": "^4.0.4"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "7.3.3",
     "@testing-library/jest-dom": "^4.0.0",
     "@testing-library/react": "^8.0.4",
     "@types/classnames": "^2.2.7",
@@ -19,12 +20,20 @@
     "@types/node": "12.0.2",
     "@types/react": "16.8.18",
     "@types/react-dom": "16.8.4",
-    "@typescript-eslint/eslint-plugin": "^1.7.0",
-    "@typescript-eslint/parser": "^1.7.0",
-    "eslint-config-prettier": "^4.0.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
+    "@typescript-eslint/eslint-plugin": "1.10.2",
+    "@typescript-eslint/parser": "1.13.0",
+    "eslint": "5.16.0",
+    "eslint-config-prettier": "6.7.0",
+    "eslint-config-react-app": "4.0.1",
+    "eslint-import-resolver-typescript": "1.1.1",
+    "eslint-loader": "2.2.1",
+    "eslint-plugin-cypress": "2.7.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-prettier": "3.1.1",
+    "eslint-plugin-react": "7.14.2",
+    "eslint-plugin-react-hooks": "1.6.1",
+    "eslint-plugin-simple-import-sort": "4.0.0",
+    "eslint-plugin-typescript-sort-keys": "0.5.0",
     "husky": "^1.2.1",
     "lint-staged": "^8.1.5",
     "prettier": "^1.16.4",
@@ -35,11 +44,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "lint": "eslint --ext .tsx,.ts src/",
+    "lint:fix": "eslint --ext .tsx,.ts src/ --fix",
     "format": "prettier --single-quote --trailing-comma es5 --write \"src/**/*.+(ts|tsx|js|css)\""
-  },
-  "prettier": {
-    "singleQuote": true,
-    "trailingComma": "es5"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -55,8 +62,9 @@
     }
   },
   "lint-staged": {
-    "src/**/*.+(ts|tsx|js|css)": [
-      "prettier --single-quote --trailing-comma es5 --write",
+    "src/main/ts/**/*.{ts,tsx}": [
+      "prettier --write",
+      "eslint --fix",
       "git add"
     ]
   }
